modified build error.

--- a/servicemanager/Makefile
+++ b/servicemanager/Makefile
@@ -1,10 +1,13 @@
-all: servicemanager 
+all: servicemanager bctest
 
 servicemanager: binder.o service_manager.o
 	gcc -o $@ $^
 
+bctest: bctest.o binder.o
+	gcc -o $@ $^
+
 clean:
-	rm -f *.o servicemanager
+	rm -f *.o servicemanager bctest
 	
 %.o: %.c
 	gcc -I.. $(CFLAGS) -c -o $@ $<
