--- a/servicemanager/Makefile
+++ b/servicemanager/Makefile
@@ -1,13 +1,13 @@
 all: servicemanager bctest
 
 servicemanager: binder.o service_manager.o
-	gcc -o $@ $^
+	gcc-4.9 -o $@ $^
 
 bctest: bctest.o binder.o
-	gcc -o $@ $^
+	gcc-4.9 -o $@ $^
 
 clean:
 	rm -f *.o servicemanager bctest
 	
 %.o: %.c
-	gcc -I.. $(CFLAGS) -c -o $@ $<
+	gcc-4.9 -I.. $(CFLAGS) -c -o $@ $<
